// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando el componente <GifExpertApp /> Debe renderizarse correctamente 1`] = `
<Fragment>
  <h1>
    GiftExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Probando el componente <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h1>
    GiftExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="rick and morty"
      key="rick and morty"
    />
    <GifGrid
      category="Friends"
      key="Friends"
    />
  </ol>
</Fragment>
`;
